fixed menu responsiveness on small devices

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -192,7 +192,11 @@
     width: 100%;
   }
   #menu-list{
-    font-size: 1rem;
+    font-size: 0.8rem;
+    column-gap: 0.3rem;
+  }
+  #logo li a img {
+    height: 55px;
   }
 
 }
